tests/health/tests__lsp__static_definition_test.toit.gold
tests/lsp/static_definition_test.toit:23:11: error: Can't invoke method on 'none' type
  Foo.bar.something
          ^~~~~~~~~
tests/lsp/static_definition_test.toit:38:18: error: Can't invoke method on 'none' type
  prefix.Foo.bar.something
                 ^~~~~~~~~
